[package]
name = "devils-fingers"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
cidr = { version = "0.2", features = ["serde"] }
clap = "2"
ctrlc = { version = "3", features = ["termination"] }
etherparse = "0.13"
httparse = "1"
insideout = "0.2"
itertools = "0.11"
libc = "0.2"
log = "0.4"
nix = "0.18"
publicsuffix = { version = "2", default-features = false }
rand = "0.8"
septid = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.8"
zstd = "0.13"

[dev-dependencies]
hex = "0.4"

[profile.release]
lto = true
panic = "abort"
debug = true
