[package]
name = "devils-fingers"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
cidr = { version = "0.2", features = ["serde"] }
clap = {  version = "4" }
ctrlc = { version = "3", features = ["termination"] }
etherparse = "0.13"
httparse = "1"
insideout = "0.2"
itertools = "0.11"
libc = "0.2"
log = "0.4"
nix = { version = "0.27", features = ["process"] }
publicsuffix = { version = "2", default-features = false }
pretty_env_logger = "0.5"
septid = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.8"
zstd = "0.13"

[profile.release]
lto = true
panic = "abort"
debug = true

[target.x86_64-unknown-linux-musl]
rustflags = ["-Clink-args=-L/musl/lib"]
